build: lift Compose runtime deps into kmp.library.compose convention; share Android config
Convention plugin changes:
- KotlinMultiplatformLibraryComposeConventionPlugin now wires the Compose
  Multiplatform runtime deps (runtime, foundation, material3, ui,
  materialIconsExtended, components.resources) into commonMain via
  ComposePlugin.Dependencies(project). Suppresses the 1.10.3 deprecation on
  the val accessors (no clean replacement until JetBrains lands one).
- KotlinMultiplatformLibraryConventionPlugin and
  AndroidApplicationConventionPlugin now share the Android compile/packaging
  defaults via configureAndroidCommon(). The KMP plugin keeps its own
  testInstrumentationRunner + buildTypes.release proguard config since those
  are library-specific. AndroidCommon no longer touches Kotlin extensions —
  each plugin sets jvmToolchain on its own (KMP vs Android) extension type.

Per-module build.gradle.kts (7 modules):
- Drops the 6-line compose runtime block from each feature, common/ui, and
  webview module — now provided centrally.
- 3 feature modules (store, giveaways, search) lose their entire kotlin {}
  block because compose deps were the only content.

Verified with `./gradlew testDebugUnitTest iosSimulatorArm64Test
--max-workers=1`. The lone iOS-sim test "failure" was the known
KotlinNativeSimulatorTest TC-message parse race (3/3 store tests pass per
JUnit XML); re-running the task in isolation succeeded.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>